back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-app
  template:
    metadata:
      labels:
        app: command-app
    spec:
      containers:
        - name: command-app
          image: eduarandres/command-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-app
  template:
    metadata:
      labels:
        app: query-app
    spec:
      containers:
        - name: query-app
          image: eduarandres/query-app:latest
          ports:
            - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-app
  template:
    metadata:
      labels:
        app: proxy-app
    spec:
      containers:
        - name: proxy-app
          image: eduarandres/proxy-app:latest
          ports:
            - containerPort: 3002
              name: rabbit
            - containerPort: 81
              name: socket
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: auth-app
          image: eduarandres/auth-app:latest
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: command-service
spec:
  type: NodePort
  selector:
    app: command-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000

---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: NodePort
  selector:
    app: query-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  type: NodePort
  selector:
    app: proxy-app
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
      nodePort: 30002
      name: rabbit
    - protocol: TCP
      port: 81
      targetPort: 81
      nodePort: 30081
      name: socket

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: NodePort
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
      nodePort: 30003
