back.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: command.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: command-service
                port:
                  number: 3000
    - host: query.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 3001
    - host: proxy.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-service
                port:
                  number: 3002
    - host: auth.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3003
